# sciauth-lightweight-environment

./: .dockerignore  .env  .gitignore  Dockerfile.htcondor  Dockerfile.jupyterhub  Dockerfile.scitokens  Dockerfile.singleuser  Makefile  README.md  README.rst  docker-compose.yaml  jupyterhub_config.py  pyproject.toml
config/: 00-minicondor  condor_mapfile  tls.req
config/certificates/: tls.req
config/htcondor/: 00-minicondor  90-end-to-end-env  99-notebook  condor_mapfile
config/jupyterhub/: config.py
config/token-issuer/: proxy-config.xml.tmpl  server-config.xml.tmpl
dev/: docker-compose.yaml
overrides/htcondor/: 00-minicondor
templates/: jupyterhub_svc_config.yaml  oauth.env  user-config.json
util/: add_cert.py
