## Project requirements (PEP 518, https://python-poetry.org/).


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.black]
line-length = 80
target-version = ["py38", "py39", "py310", "py311"]


[tool.isort]
line_length = 80
profile = "black"


[tool.mypy]
explicit_package_bases = true
namespace_packages = true

check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

color_output = false
pretty = true
show_error_codes = true

incremental = true
sqlite_cache = true


[tool.poetry]
name = "sciauth_lightweight_environment"
version = "0.0.1"
description = "Docker Compose environment for experimenting with SciTokens"
license = "Apache-2.0"
authors = [
    "Brian Aydemir <baydemir@morgridge.org>",
    "Jim Basney <jbasney@illinois.edu>",
    "Anh Vu <vuanh@grinnell.edu>",
    "Quang Le <lequang@grinnell.edu>",
]
maintainers = ["Brian Aydemir <baydemir@morgridge.org>"]
repository = "https://github.com/SciAuth/sciauth-lightweight-environment"
packages = []


[tool.poetry.dependencies]
python = ">=3.8,<3.12"


[tool.poetry.group.dev.dependencies]
bandit = "~1.7"
black = "~23.1"
docutils = "~0.19"
isort = "~5.12"
markdown = "~3.4"
mypy = "~1.1"
pre-commit = "~3.1"
pylint = "~2.17"
"ruamel.yaml.cmd" = "~0.6"
safety = "~2.3"


[tool.pylint.messages-control]
max-line-length = 80
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
